# algokit-lora

./: .commitlintrc  .editorconfig  .env.sample  .eslintignore  .eslintrc.cjs  .gitignore  .npmrc  .nsprc  .prettierignore  .prettierrc  .svgrrc.cjs  CHANGELOG.md  CONTRIBUTING.md  MIGRATION_PLAN.md  README.md  _headers  _redirects  components.json  eslint.config.mjs  index.html  netlify.toml  package-lock.json  package.json  release.config.ts  snapcraft.yaml  tailwind.config.js  test-results.md  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: on-release-branch.yaml  pr.yaml  preview-app.yaml  promote-to-production.yaml  promote-to-production.yml  push.yaml  release-desktop.yaml  release-web.yaml  release.yaml  remove-preview-apps.yaml  staging-deployment.yml  testing.yaml
patches/: @txnlab+use-wallet+2.8.2.patch  @txnlab+use-wallet+3.10.1.patch  algosdk+3.3.1.patch  react-router-dom+6.24.0.patch  react-router-dom+6.30.3.patch
scripts/: sync-version.cjs
scripts/snap/: create-desktop-file.sh  create-snapcraft-yaml.sh
src/: App.css  App.routes.tsx  App.tsx  config.ts  global.d.ts  index-page.tsx  index.css  react-table-config.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__mocks__/: react-router-dom.ts
src/components/: theme-provider.tsx
src/routes/: templated-route.ts  url-template.ts  urls.ts
src/styles/: fonts-italic.css  (+1 more)
tests/: donkey.test.ts  theme.test.tsx
(+1014 files in other folders)
